fix overflow-x site-wide

--- a/public/stylesheets/bcd-styles.css
+++ b/public/stylesheets/bcd-styles.css
@@ -7,6 +7,7 @@
 html {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 
